# inform

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
src/: common.rs  fmt.rs  io.rs  lib.rs  marker.rs
tests/: fmt.rs  io.rs
