[package]
name = "inform"
description = "Another rust indentation formatter"
version = "0.2.0"
edition = "2021"
authors = ["Ethan Uppal"]
repository = "https://github.com/ethanuppal/inform"
license = "MIT"
license-file = "LICENSE"

[features]
default = ["fmt", "io"]
fmt = []
io = []

[dependencies]
