[package]
name = "inform"
description = "Another Rust indentation formatter"
version = "0.3.3"
edition = "2021"
authors = ["Ethan Uppal"]
repository = "https://github.com/ethanuppal/inform"
license = "LGPL-3.0-or-later"

[features]
default = ["fmt", "io"]
fmt = []
io = []

[build-dependencies]
cargo_toml = "0.20.5"
